# inspire

./: Cargo.toml  build.rs  cert.der  flake.nix
src/: main.rs
