[package]
name = "inspire"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { git = "https://github.com/hyperium/tonic" }
prost = "0.9"
prost-types = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"]}
rcgen = { git = "https://github.com/NickCao/rcgen" }
procfs = "0.12.0"
url = "2.2.2"
argh = "0.1.7"

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic" }
