[package]
name = "inspire"
version = "1.0.0"
edition = "2021"

[dependencies]
tonic = { git = "https://github.com/hyperium/tonic" }
prost = "0.10"
prost-types = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"]}
openssl = "0.10.38"
procfs = "0.12.0"
url = "2.2.2"
argh = "0.1.7"
anyhow = "1.0"

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic" }
