[package]
name = "inspire"
version = "1.0.1"
edition = "2021"

[dependencies]
tonic = "*"
prost = "*"
prost-types = "*"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "*", features = ["net"]}
openssl = "*"
procfs = "*"
url = "2"
argh = "*"
anyhow = "1"

[build-dependencies]
tonic-build = "*"
